# bazel_rules_jq

./: .bazelignore  .bazelrc  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/: cspell.yaml  renovate-regex.json  renovate.json
.github/workflows/: ci.bazelrc  ci.yaml  release.yml
docs/: BUILD.bazel  repositories.md  rules.md  toolchain.md
example/eval/: BUILD.bazel  sample.yaml
example/genrule/: BUILD.bazel
full-examples/: README.md
full-examples/basic/: BUILD.bazel  WORKSPACE  sample.yaml
full-examples/basic-1.6/: WORKSPACE
jq/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
jq/private/: BUILD.bazel  toolchains_repo.bzl
jq/private/rules/: BUILD.bazel  eval.bzl
lib/bazel/: fix-python-version-PY2-per-rules_pkg-PR169.patch
