load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//jq:defs.bzl", "jq_eval")

jq_eval(
    name = "actual",
    srcs = ["sample.yaml"],
    filter = ".a.b",
    raw_output = True,
)

write_file(
    name = "expected",
    out = "out.yaml",
    content = [
        "123",
        "",
    ],
)

diff_test(
    name = "check_eval",
    file1 = ":expected",
    file2 = ":actual",
)
