load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

genrule(
    name = "actual",
    outs = ["actual.yaml"],
    cmd = "$(JQ_BIN) '.one = 1' --null-input --compact-output > $@",
    toolchains = ["@jq1_6_toolchains//:resolved_toolchain"],
)

write_file(
    name = "expected",
    out = "out.yaml",
    content = [
        "{\"one\":1}",
        "",
    ],
)

diff_test(
    name = "check_eval",
    file1 = ":expected",
    file2 = ":actual",
)
