"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//jq/private:__pkg__"],
)

bzl_library(
    name = "jq_eval",
    srcs = ["eval.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:collections",
        "@bazel_skylib//lib:shell",
    ],
)
